# rag-pipeline2

./: .env.example  .gitignore  README.md  config.py  main.py  pyproject.toml  rag_system.py  requirements.txt
components/: document_loader.py  embedding_model.py  format_docs.py  text_splitter.py  vector_store.py
data/: fedarist.txt.txt  task_orchestration.txt  ws_audio_1f8a8680.webm
models/: chat.py  document.py  upload.py
protos/: service.proto  service_pb2.py  service_pb2_grpc.py
providers/: chain.py  ingestor.py  llm.py  retriever.py  stt.py
services/ingestion_service/: pyproject.toml
services/query_service/: main.py  pyproject.toml  service.py
services/query_service/components/: prompt.py
services/query_service/providers/: chain.py  llm.py  retriever.py
services/stt_service/: main.py  pyproject.toml
services/stt_service/providers/: stt.py
shared/: config.py  database.py  embeddings.py  models.py  pyproject.toml
