[project]
name = "rag-shared"
version = "0.1.0"
description = "Shared utilities and configurations"
requires-python = ">=3.11"
dependencies = [
    "grpcio>=1.76.0",
    "langchain>=1.1.0",
    "langchain-classic>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.1.0",
    "langchain-huggingface>=1.1.0",
    "langchain-openai>=1.1.0",
    "langchain-pinecone>=0.2.13",
    "pinecone-client>=6.0.0",
    "protobuf>=6.33.1",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
]
